@@ -3,10 +3,10 @@ Section: mail
 Priority: standard
 Maintainer: Christoph Berg <myon@debian.org>
 Uploaders: Adeodato Simó <dato@net.com.org.es>, Antonio Radici <antonio@dyne.org>
-Build-Depends: debhelper (>> 7), quilt, automake, gawk, gettext, xsltproc,
- docbook-xml, docbook-xsl, links, libncurses5-dev, libsasl2-dev, libgnutls-dev,
- libidn11-dev, zlib1g-dev, libncursesw5-dev, libgdbm-dev, libkrb5-dev, pkg-config,
- libgpgme11-dev
+Build-Depends: automake, debhelper (>> 7), docbook-xml, docbook-xsl,
+ elinks-lite | elinks, gawk, gettext, libgdbm-dev, libgnutls-dev,
+ libgpgme11-dev, libidn11-dev, libkrb5-dev, libncurses5-dev, libncursesw5-dev,
+ libsasl2-dev, pkg-config, quilt, xsltproc, zlib1g-dev
 Standards-Version: 3.8.2
 Vcs-Git: git://git.debian.org/git/pkg-mutt/mutt.git
 Vcs-Browser: http://git.debian.org/?p=pkg-mutt/mutt.git
