@@ -1,18 +1,19 @@
-Use links(1) to generate the HTML manual page
+Use elinks(1) to generate the HTML manual page
 
 --- a/doc/Makefile.am
 +++ b/doc/Makefile.am
-@@ -100,7 +100,8 @@
+@@ -100,9 +100,7 @@ uninstall-local:
  
  check:
  manual.txt: manual.html
 -	-LC_ALL=C lynx -dump -nolist -with_backspaces manual.html > $@ || \
-+	links.main -dump $< > $@ || links -dump $< > $@ || \
-+	LC_ALL=C lynx -dump -nolist -with_backspaces manual.html > $@ || \
- 	LC_ALL=C w3m -dump manual.html > $@ || \
- 	LC_ALL=C elinks -dump -no-numbering -no-references manual.html | sed -e 's,\\001, ,g' > $@
+-	LC_ALL=C w3m -dump manual.html > $@ || \
+-	LC_ALL=C elinks -dump -no-numbering -no-references manual.html | sed -e 's,\\001, ,g' > $@
++	LC_ALL=C elinks -dump -dump-charset utf8 -no-numbering -no-references $< > $@
  
-@@ -114,10 +115,10 @@
+ Muttrc: stamp-doc-rc
+ 
+@@ -114,10 +112,10 @@ stamp-doc-rc: $(top_srcdir)/init.h maked
  	touch stamp-doc-rc
  
  manual.html: $(srcdir)/html.xsl $(srcdir)/mutt.xsl stamp-doc-xml $(srcdir)/mutt.css
